--- a/css/styles.css
+++ b/css/styles.css
@@ -264,10 +264,130 @@ button {
 .container-img {
     border-radius: 24px;
     overflow-x: hidden;
+    display: flex;
 }
 
 .section-two-img {
     border-radius: 24px;
     max-height: 100%;
     overflow: hidden;
+}
+
+.section-three-title {
+    margin-top: 300px;
+    margin-left: 283px;
+    margin-right: 283px;
+    width: 714px;
+    height: 96px;
+    color: #FBFBFB;
+    font-size: 48px;
+    font-family: Inter;
+    font-weight: 500;
+    line-height: 48px;
+    text-align: center;
+}
+
+.menu-of-yacht {
+    display: flex;
+    gap: 23px;
+}
+
+.img-yacht {
+    border-radius: 24px;
+    margin-top: 16px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.item-of-yacht {
+    width: 377px;
+    height: 508px;
+    background-color: #FBFBFB;
+    margin-top: 75px;
+    border-radius: 24px;
+}
+
+.item-of-yacht:first-child {
+    margin-left: 51px;
+}
+
+.menu-title {
+    display: flex;
+    justify-content: space-between;
+    margin-left: 32px;
+    margin-right: 32px;
+    margin-top: 32px;
+    margin-bottom: 16px;
+}
+
+.menu-of-details {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 16px;
+    margin-left: 32px;
+    margin-right: 32px;
+}
+
+.item-of-names {
+    margin-top: 6px;
+}
+
+.item-of-settings {
+    margin-top: 6px;
+}
+
+.item-of-settings:first-child {
+    margin-top: o;
+}
+
+.item-of-names:first-child {
+    margin-top: o;
+}
+
+.luxury-yacht {
+    color: #040306;
+    font-size: 13px;
+    font-family: Inter;
+    font-weight: 400;
+    text-transform: uppercase;
+    line-height: 15.34px;
+    letter-spacing: 0.39px;
+}
+
+.name-of-yacht { 
+    color: #1B414B;
+    font-size: 16px;
+    font-family: Inter;
+    font-weight: 500;
+    text-transform: uppercase;
+    line-height: 19.20px;
+    word-wrap: break-word
+}
+
+.item-of-names {
+    color: #040306;
+    font-size: 14px;
+    font-family: Inter;
+    font-weight: 400;
+    text-transform: uppercase;
+    line-height: 16.52px;
+    letter-spacing: 0.42px;
+}
+
+.item-of-settings {
+    color: #040306;
+    font-size: 14px;
+    font-family: Inter;
+    font-weight: 400;
+    line-height: 16.52px;
+    letter-spacing: 0.42px;
+    word-wrap: break-word
+}
+
+.icon-of-vector {
+    background-color: #0403061A;
+    width: 313px;
+    height: 3px;
+    margin-left: auto;
+    margin-right: auto;
 }
